--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
     <head>
         <title> Project 1</title>
+        <link href="screen.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1> Sign Up! </h1>
+
+        <!-- Javascript Files -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="site.js" type="application/javascript"></script>
     </body>
 </html>
