--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
         <link href="screen.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1> Sign Up! </h1>
+        <main id="home-content">
+            <h1> Sign Up! </h1>
+            <section id="img-section">
 
+            </section>
+            <section id="form-section">
+
+            </section>
+        </main>
         <!-- Javascript Files -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="site.js" type="application/javascript"></script>
