Added figure in form

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <body>
         <main id="home-content">
             <h1> Sign Up! </h1>
-            <section id="img-section">
-
-            </section>
+            <figure>
+                <img src="images/Roadster.jpg" alt="Roadster 2020">
+                <figcaption> Tesla Roadster 2020</figcaption>
+            </figure>
             <section id="form-section">
-
             </section>
         </main>
         <!-- Javascript Files -->
