Added form items

--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
             <h1> Sign Up! </h1>
             <figure>
                 <img src="images/Roadster.jpg" alt="Roadster 2020">
-                <figcaption> Tesla Roadster 2020</figcaption>
+                <figcaption> Tesla Roadster 2020 </figcaption>
             </figure>
             <section id="form-section">
+                <form id="signup-form">
+                    <ul>
+                        <li>
+                            <label for="name-input"> Name </label>
+                            <input type="text" id="name-input"/>
+                        </li>
+                        <li>
+                            <label for="email-input"> Email </label>
+                            <input type="email" id="email-input"/>
+                        </li>
+                        <li>
+                            <label for="phone-input"> Phone </label>
+                            <input type="tel" id="phone-input"/>
+                        </li>
+                        <li>
+                            <input type="button" id="form-submit"/>
+                        </li>
+                    </ul>
+                </form>
             </section>
         </main>
         <!-- Javascript Files -->
