Added id and classes in html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <main id="home-content">
-            <h1> Sign Up! </h1>
-            <figure>
-                <img src="images/Roadster.jpg" alt="Roadster 2020">
-                <figcaption> Tesla Roadster 2020 </figcaption>
+            <figure id="lead-img-container">
+                <img id="lead-img" src="images/Roadster.jpg" alt="Roadster 2020">
+                <figcaption id="lead-img-caption"> Tesla Roadster 2020 </figcaption>
             </figure>
             <section id="form-section">
+                <h1> Sign Up! </h1>
                 <form id="signup-form">
                     <ul>
                         <li>
