Added meta tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title> Project 1</title>
-        <link href="screen.css" type="text/css" rel="stylesheet">
+        <title> Project 1 </title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+        <link href="/screen.css" media="screen" rel="stylesheet" />
     </head>
     <body>
         <main id="home-content">
