--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> Project 1 </title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-        <link href="/screen.css" media="screen" rel="stylesheet" />
+        <link href="css/screen.css" media="screen" rel="stylesheet" />
     </head>
     <body>
         <main id="home-content">
@@ -37,6 +37,6 @@
         </main>
         <!-- Javascript Files -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="site.js" type="application/javascript"></script>
+        <script src="js/site.js" type="application/javascript"></script>
     </body>
 </html>
