Added button styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <input type="tel" id="phone-input"/>
                         </li>
                         <li>
-                            <input type="button" id="form-submit"/>
+                            <input type="button" id="form-submit" value="GO"/>
                         </li>
                     </ul>
                 </form>
