form item styling

--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
         <main id="home-content">
             <figure id="lead-img-container">
                 <img id="lead-img" src="images/Roadster.jpg" alt="Roadster 2020">
-                <figcaption id="lead-img-caption"> Tesla Roadster 2020 </figcaption>
             </figure>
             <section id="form-section">
                 <h1> Sign Up! </h1>
                 <form id="signup-form">
                     <ul>
-                        <li>
+                        <li class="form-item">
                             <label for="name-input"> Name </label>
                             <input type="text" id="name-input"/>
                         </li>
-                        <li>
+                        <li class="form-item">
                             <label for="email-input"> Email </label>
                             <input type="email" id="email-input"/>
                         </li>
-                        <li>
+                        <li class="form-item">
                             <label for="phone-input"> Phone </label>
                             <input type="tel" id="phone-input"/>
                         </li>
-                        <li>
+                        <li class="form-item">
                             <input type="button" id="form-submit" value="GO"/>
                         </li>
                     </ul>
