--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <label for="phone-input"> Phone </label>
                             <input type="tel" id="phone-input"/>
                         </li>
-                        <li class="form-item">
+                        <li class="form-item" id="submit-btn">
                             <input type="button" id="form-submit" value="GO"/>
                         </li>
                     </ul>
