--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> Project 1 </title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link href="css/screen.css" media="screen" rel="stylesheet" />
     </head>
     <body>
