--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                 <img id="lead-img" src="images/Roadster.jpg" alt="Roadster 2020">
             </figure>
             <section id="form-section">
-                <h1> Sign Up! </h1>
+                <h1> Roadster 2020 </h1>
+                <p> Sign up to test drive a Tesla Roadster! </p>
                 <form id="signup-form">
                     <ul>
                         <li class="form-item">
