Added missing form attributes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <section id="form-section">
                 <h1> Roadster 2020 </h1>
                 <p> Sign up to test drive a Tesla Roadster! </p>
-                <form id="signup-form">
+                <form id="signup-form" method="get" action="#null" autocomplete="on">
                     <ul>
                         <li class="form-item">
                             <label for="name-input"> Name </label>
