added event listener

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <section id="form-section">
                 <h1> Roadster 2020 </h1>
                 <p> Sign up to test drive a Tesla Roadster! </p>
-                <form id="signup-form" method="get" action="#null" autocomplete="on">
+                <form name="signup-form" id="signup-form" method="get" action="#null" autocomplete="on">
                     <ul>
                         <li class="form-item">
                             <label for="name-input"> Name </label>
-                            <input type="text" id="name-input"/>
+                            <input type="text" id="name-input" name="name"/>
                         </li>
                         <li class="form-item">
                             <label for="email-input"> Email </label>
-                            <input type="email" id="email-input"/>
+                            <input type="email" name="email" id="email-input"/>
                         </li>
                         <li class="form-item">
                             <label for="phone-input"> Phone </label>
-                            <input type="tel" id="phone-input"/>
+                            <input type="tel" id="phone-input" name="phone"/>
                         </li>
                         <li class="form-item" id="submit-btn">
                             <input type="button" id="form-submit" value="GO"/>
