fixing minute errors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <input type="tel" id="phone-input" name="phone"/>
                         </li>
                         <li class="form-item" id="submit-btn">
-                            <input type="button" id="form-submit" value="GO"/>
+                            <input type="submit" id="form-submit" value="GO"/>
                         </li>
                     </ul>
                 </form>
